--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>p5.js example</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-      }
-    </style>
-    <canvas id="mycanvas" width="480" height="320"></canvas>
+    <title>hills sketch</title>
+    <head>
+	     <link rel="stylesheet" href="style.css">
+	    <div>
+    <canvas id="mycanvas" width="0" height="0"></canvas>
+     </div>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <script src="https://unpkg.com/p5.createloop@latest/dist/p5.createloop.js"></script>
     <script src="./sketch/calc-azimuth-elev.js"></script>
     <script src="./sketch/sketch.js"></script>
   </head>
-  <body>
-    <main></main>
-  </body>
 </html>
